export const snapshot = {};

snapshot[`updates to latest version: not even a URL 1`] = `
{
  error: "Invalid URL: 'not even a URL'",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo 1`] = `
{
  error: "No version in https://libs.example.com/foo",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@ 1`] = `
{
  error: "No version in https://libs.example.com/foo@",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@v 1`] = `
{
  error: "No version in https://libs.example.com/foo@v",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@x.x.x 1`] = `
{
  error: "No major version in @x.x.x",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@1",
    currentVersion: {
      index: {
        end: 30,
        start: 28,
      },
      major: 1,
      match: "@1",
      minor: null,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.x.x 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@1.x.x",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.x.x",
      minor: null,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@v1 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@v1",
    currentVersion: {
      index: {
        end: 31,
        start: 28,
      },
      major: 1,
      match: "@v1",
      minor: null,
      patch: null,
      prefix: "v",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@1.2",
    currentVersion: {
      index: {
        end: 32,
        start: 28,
      },
      major: 1,
      match: "@1.2",
      minor: 2,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.* 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@1.2.*",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.*",
      minor: 2,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@v1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@v1.2",
    currentVersion: {
      index: {
        end: 33,
        start: 28,
      },
      major: 1,
      match: "@v1.2",
      minor: 2,
      patch: null,
      prefix: "v",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@1.2.3",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@v1.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@v1.2.3",
    currentVersion: {
      index: {
        end: 35,
        start: 28,
      },
      major: 1,
      match: "@v1.2.3",
      minor: 2,
      patch: 3,
      prefix: "v",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.3/index.js 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo/index.js",
    currentUrl: "https://libs.example.com/foo@1.2.3/index.js",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4/index.js",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.3?bar=baz 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo?bar=baz",
    currentUrl: "https://libs.example.com/foo@1.2.3?bar=baz",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4?bar=baz",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.3?remove 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo?remove",
    currentUrl: "https://libs.example.com/foo@1.2.3?remove",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4?remove",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.3#faq 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo#faq",
    currentUrl: "https://libs.example.com/foo@1.2.3#faq",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4#faq",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@1.2.3-beta 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@1.2.3-beta",
    currentVersion: {
      index: {
        end: 39,
        start: 28,
      },
      major: 1,
      match: "@1.2.3-beta",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: "beta",
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@2.2.3",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2.3.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@2.3.3",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.3",
      minor: 3,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "patch",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2.3.4 1`] = `
{
  ok: true,
  value: null,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@2.3",
    currentVersion: {
      index: {
        end: 32,
        start: 28,
      },
      major: 2,
      match: "@2.3",
      minor: 3,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "patch",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@2",
    currentVersion: {
      index: {
        end: 30,
        start: 28,
      },
      major: 2,
      match: "@2",
      minor: null,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2.3.5 1`] = `
{
  error: "Latest version @2.3.4 is lower than current version @2.3.5",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@2.4.5 1`] = `
{
  error: "Latest version @2.3.4 is lower than current version @2.4.5",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@3.4.5 1`] = `
{
  error: "Latest version @2.3.4 is lower than current version @3.4.5",
  ok: false,
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@0.1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@0.1.2",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 0,
      match: "@0.1.2",
      minor: 1,
      patch: 2,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/foo@0.0.1 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo",
    currentUrl: "https://libs.example.com/foo@0.0.1",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 0,
      match: "@0.0.1",
      minor: 0,
      patch: 1,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@2.3.4",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 2,
      match: "@2.3.4",
      minor: 3,
      patch: 4,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates to latest version: https://libs.example.com/unknown@1.2.3 1`] = `
{
  error: "Fetching https://libs.example.com/unknown failed: 404 ",
  ok: false,
}
`;

snapshot[`updates to latest version: https://not-exists.example.com/foo@1.2.3 1`] = `
{
  error: "Fetching https://not-exists.example.com/foo failed: Error: Network error",
  ok: false,
}
`;

snapshot[`updates to latest version: https://no-redirect.example.com/foo@1.2.3 1`] = `
{
  error: "No redirect for https://no-redirect.example.com/foo",
  ok: false,
}
`;

snapshot[`updates to latest version: https://bad-redirect.example.com/foo@1.2.3 1`] = `
{
  error: "No version in latest URL https://bad-redirect.example.com/bar",
  ok: false,
}
`;

snapshot[`updates with max update minor: not even a URL 1`] = `
{
  error: "Invalid URL: 'not even a URL'",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo 1`] = `
{
  error: "No version in https://libs.example.com/foo",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@ 1`] = `
{
  error: "No version in https://libs.example.com/foo@",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@v 1`] = `
{
  error: "No version in https://libs.example.com/foo@v",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@x.x.x 1`] = `
{
  error: "No major version in @x.x.x",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1 1`] = `
{
  error: "No minor version in @1 and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.x.x 1`] = `
{
  error: "No minor version in @1.x.x and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@v1 1`] = `
{
  error: "No minor version in @v1 and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@1",
    currentUrl: "https://libs.example.com/foo@1.2",
    currentVersion: {
      index: {
        end: 32,
        start: 28,
      },
      major: 1,
      match: "@1.2",
      minor: 2,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@1.4.5",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.4.5",
      minor: 4,
      patch: 5,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.* 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@1",
    currentUrl: "https://libs.example.com/foo@1.2.*",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.*",
      minor: 2,
      patch: null,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@1.4.5",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.4.5",
      minor: 4,
      patch: 5,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@v1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@v1",
    currentUrl: "https://libs.example.com/foo@v1.2",
    currentVersion: {
      index: {
        end: 33,
        start: 28,
      },
      major: 1,
      match: "@v1.2",
      minor: 2,
      patch: null,
      prefix: "v",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@v1.4.5",
    latestVersion: {
      index: {
        end: 35,
        start: 28,
      },
      major: 1,
      match: "@v1.4.5",
      minor: 4,
      patch: 5,
      prefix: "v",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@1",
    currentUrl: "https://libs.example.com/foo@1.2.3",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@1.4.5",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.4.5",
      minor: 4,
      patch: 5,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@v1.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@v1",
    currentUrl: "https://libs.example.com/foo@v1.2.3",
    currentVersion: {
      index: {
        end: 35,
        start: 28,
      },
      major: 1,
      match: "@v1.2.3",
      minor: 2,
      patch: 3,
      prefix: "v",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@v1.4.5",
    latestVersion: {
      index: {
        end: 35,
        start: 28,
      },
      major: 1,
      match: "@v1.4.5",
      minor: 4,
      patch: 5,
      prefix: "v",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.3/index.js 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1/index.js failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.3?bar=baz 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1?bar=baz failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.3?remove 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1?remove failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.3#faq 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1#faq failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@1.2.3-beta 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@1",
    currentUrl: "https://libs.example.com/foo@1.2.3-beta",
    currentVersion: {
      index: {
        end: 39,
        start: 28,
      },
      major: 1,
      match: "@1.2.3-beta",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: "beta",
    },
    latestUrl: "https://libs.example.com/foo@1.4.5",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.4.5",
      minor: 4,
      patch: 5,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2.2.3 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2.3.3 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2.3.4 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2.3 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2 1`] = `
{
  error: "No minor version in @2 and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2.3.5 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@2.4.5 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@3.4.5 1`] = `
{
  error: "Fetching https://libs.example.com/foo@3 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@0.1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@0",
    currentUrl: "https://libs.example.com/foo@0.1.2",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 0,
      match: "@0.1.2",
      minor: 1,
      patch: 2,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@0.10.20",
    latestVersion: {
      index: {
        end: 36,
        start: 28,
      },
      major: 0,
      match: "@0.10.20",
      minor: 10,
      patch: 20,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/foo@0.0.1 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@0",
    currentUrl: "https://libs.example.com/foo@0.0.1",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 0,
      match: "@0.0.1",
      minor: 0,
      patch: 1,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@0.10.20",
    latestVersion: {
      index: {
        end: 36,
        start: 28,
      },
      major: 0,
      match: "@0.10.20",
      minor: 10,
      patch: 20,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates with max update minor: https://libs.example.com/unknown@1.2.3 1`] = `
{
  error: "Fetching https://libs.example.com/unknown@1 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://not-exists.example.com/foo@1.2.3 1`] = `
{
  error: "Fetching https://not-exists.example.com/foo@1 failed: Error: Network error",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://no-redirect.example.com/foo@1.2.3 1`] = `
{
  error: "No redirect for https://no-redirect.example.com/foo@1",
  ok: false,
}
`;

snapshot[`updates with max update minor: https://bad-redirect.example.com/foo@1.2.3 1`] = `
{
  error: "Latest version @1.2 is not an exact version",
  ok: false,
}
`;

snapshot[`updates with max update patch: not even a URL 1`] = `
{
  error: "Invalid URL: 'not even a URL'",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo 1`] = `
{
  error: "No version in https://libs.example.com/foo",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@ 1`] = `
{
  error: "No version in https://libs.example.com/foo@",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@v 1`] = `
{
  error: "No version in https://libs.example.com/foo@v",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@x.x.x 1`] = `
{
  error: "No major version in @x.x.x",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1 1`] = `
{
  error: "No minor version in @1 and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.x.x 1`] = `
{
  error: "No minor version in @1.x.x and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@v1 1`] = `
{
  error: "No minor version in @v1 and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2 1`] = `
{
  error: "No patch version in @1.2 and max update is patch",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.* 1`] = `
{
  error: "No patch version in @1.2.* and max update is patch",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@v1.2 1`] = `
{
  error: "No patch version in @v1.2 and max update is patch",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@1.2",
    currentUrl: "https://libs.example.com/foo@1.2.3",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.3",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@1.2.6",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.6",
      minor: 2,
      patch: 6,
      prefix: "",
      prerelease: null,
    },
    release: "patch",
  },
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@v1.2.3 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@v1.2",
    currentUrl: "https://libs.example.com/foo@v1.2.3",
    currentVersion: {
      index: {
        end: 35,
        start: 28,
      },
      major: 1,
      match: "@v1.2.3",
      minor: 2,
      patch: 3,
      prefix: "v",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@v1.2.6",
    latestVersion: {
      index: {
        end: 35,
        start: 28,
      },
      major: 1,
      match: "@v1.2.6",
      minor: 2,
      patch: 6,
      prefix: "v",
      prerelease: null,
    },
    release: "patch",
  },
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.3/index.js 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1.2/index.js failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.3?bar=baz 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1.2?bar=baz failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.3?remove 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1.2?remove failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.3#faq 1`] = `
{
  error: "Fetching https://libs.example.com/foo@1.2#faq failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@1.2.3-beta 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@1.2",
    currentUrl: "https://libs.example.com/foo@1.2.3-beta",
    currentVersion: {
      index: {
        end: 39,
        start: 28,
      },
      major: 1,
      match: "@1.2.3-beta",
      minor: 2,
      patch: 3,
      prefix: "",
      prerelease: "beta",
    },
    latestUrl: "https://libs.example.com/foo@1.2.6",
    latestVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 1,
      match: "@1.2.6",
      minor: 2,
      patch: 6,
      prefix: "",
      prerelease: null,
    },
    release: "patch",
  },
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2.2.3 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2.2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2.3.3 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2.3 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2.3.4 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2.3 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2.3 1`] = `
{
  error: "No patch version in @2.3 and max update is patch",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2 1`] = `
{
  error: "No minor version in @2 and max update is not major",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2.3.5 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2.3 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@2.4.5 1`] = `
{
  error: "Fetching https://libs.example.com/foo@2.4 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@3.4.5 1`] = `
{
  error: "Fetching https://libs.example.com/foo@3.4 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@0.1.2 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@0.1",
    currentUrl: "https://libs.example.com/foo@0.1.2",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 0,
      match: "@0.1.2",
      minor: 1,
      patch: 2,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@0.1.1000",
    latestVersion: {
      index: {
        end: 37,
        start: 28,
      },
      major: 0,
      match: "@0.1.1000",
      minor: 1,
      patch: 1000,
      prefix: "",
      prerelease: null,
    },
    release: "minor",
  },
}
`;

snapshot[`updates with max update patch: https://libs.example.com/foo@0.0.1 1`] = `
{
  ok: true,
  value: {
    baseUrl: "https://libs.example.com/foo@0.0",
    currentUrl: "https://libs.example.com/foo@0.0.1",
    currentVersion: {
      index: {
        end: 34,
        start: 28,
      },
      major: 0,
      match: "@0.0.1",
      minor: 0,
      patch: 1,
      prefix: "",
      prerelease: null,
    },
    latestUrl: "https://libs.example.com/foo@0.0.100",
    latestVersion: {
      index: {
        end: 36,
        start: 28,
      },
      major: 0,
      match: "@0.0.100",
      minor: 0,
      patch: 100,
      prefix: "",
      prerelease: null,
    },
    release: "major",
  },
}
`;

snapshot[`updates with max update patch: https://libs.example.com/unknown@1.2.3 1`] = `
{
  error: "Fetching https://libs.example.com/unknown@1.2 failed: 404 ",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://not-exists.example.com/foo@1.2.3 1`] = `
{
  error: "Fetching https://not-exists.example.com/foo@1.2 failed: Error: Network error",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://no-redirect.example.com/foo@1.2.3 1`] = `
{
  error: "No redirect for https://no-redirect.example.com/foo@1.2",
  ok: false,
}
`;

snapshot[`updates with max update patch: https://bad-redirect.example.com/foo@1.2.3 1`] = `
{
  error: "Latest version @x.x.x is not an exact version",
  ok: false,
}
`;
